# pauline-neo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  flake.nix
backend/: .env.sample  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1ce4e17617c1_init.py  278aca658ba6_search_index.py  50a8e19d9668_semester_created_timestamp.py  674b920b5a4d_larger_varchars.py  8b6bde8f8d8d_user_accounts.py  a1b2c3d4e5f6_add_preferences_to_user_account.py  b243b7ad60ad_course_intructors_and_ou.py  bed1aefe514f_overflow_fix.py  c7d4a0c1f2a3_calendar_state.py  e4a6b7c8d9f0_pending_auth_tokens.py  f1a2b3c4d5e6_user_accounts_and_calendar.py
backend/app/: api.py  auth_challenge.py  cli.py  mail.py
backend/app/cli/: __init__.py  courses.py  scraper.py
backend/app/config/: __init__.py  api.py  database.py  mail.py
backend/app/data/brokers/: __init__.py  broker.py  database.py  list.py
backend/app/data/storage/: __init__.py  json.py  list.py
backend/app/data/storage/models/: __init__.py  account.py  course.py
backend/app/database/: __init__.py  session.py
backend/app/processing/: __init__.py  mapper.py
backend/app/routes/: api_dependencies.py  dependencies.py  frontend.py
backend/app/routes/api_v1/: api.py
backend/app/routes/api_v1/endpoints/: accounts.py  admin.py  calendar.py  courses.py  preferences.py  semesters.py
backend/app/schemas/: __init__.py  account.py  calendar.py  course.py  message.py  preferences.py
backend/app/scraper/: __init__.py  paul.py
backend/app/tests/: test_account_api.py  test_auth_challenge.py  test_mail.py
backend/app/tests/scraper/: test_date.py
backend/deploy/: pauline.nix
backend/deploy/dev/: docker-compose.yml
backend/deploy/prod/: docker-compose.yml
backend/testing/: date.py  listBroker.py
deploy/: docker-compose.yml  pauline.nix
frontend/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  (+6 more)
scraper/: .gitignore  Cargo.toml  scrape.sh
scraper/src/: lib.rs  main.rs
(+63 files in other folders)
