[tool.poetry]
name = "pauline-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.2"
bs4 = "^0.0.1"
requests = "^2.26.0"
tqdm = "^4.62.0"
aiohttp = "^3.7.4"
typer = "^0.3.2"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"
SQLAlchemy = "^1.4.29"
alembic = "^1.7.5"
psycopg2 = "^2.9.3"
cachetools = "^5.0.0"
httpx = "^0.24.0"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
