[project]
name = "pauline-backend"
version = "0.1.0"
description = "PAULINE backend"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=1.8.2,<2.0",
    "typer>=0.3.2",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-dotenv>=0.19.0",
    "sqlalchemy>=1.4.29",
    "alembic>=1.7.5",
    "psycopg2-binary>=2.9.3",
    "cachetools>=5.0.0",
    "httpx>=0.24.0",
    "psutil>=5.9.0",
]

[project.scripts]
pauline-backend = "app.api:main"

[build-system]
requires = ["setuptools>=67.7.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
