[package]
name = "paul-scrape-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "3.1", features = ["derive"] }
scraper = "0.14"
futures = "0.3"
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
task-local-extensions = "0.1"
async-trait = "0.1"
indicatif = "0.17.3"
chrono = { version = "0.4.23", features = ["serde"] }
rand = "0.8.5"
sha2 = "0.10.6"
